# tiny_ml

./: .gitignore  CLAUDE.md  README.md  __init__.py  pyproject.toml
.github/workflows/: tests.yml
core/: __init__.py  backend.py  module.py  prameter.py
examples/: classification.py  heads.py  regression.py  train_100m.py  train_100m_moe.py
layers/: __init__.py  activations.py  attention.py  dropout.py  embedding.py  feedforward.py  flash_attention.py  heads.py  linear.py  moe.py  normalization.py  residual.py
losses/: __init__.py  losses.py
metrics/: __init__.py  metrics.py
models/: __init__.py  gpt2.py  mlp.py  resnet.py  sequential.py  t5.py  transformer.py  vae.py
optim/: __init__.py  adam.py  adamw.py  clip.py  momentum.py  schedule.py  sgd.py
tests/: gradcheck.py  run_all.py  runner.py  test_gradients.py  test_invariants.py  test_training.py
training/: __init__.py  checkpoint.py  trainer.py
